  * fix undefined integer shift
  * rewrite network sendfile/mmap/writev/write backends
  * fix some unchecked return value warnings
  * [kqueue] fix kevent call
  * [autoconf] define HAVE_CRYPT when crypt() is present
  * [bsd xattr] fix compile break with BSD extended attributes in stat_cache
  * [mod_cgi] rewrite mmap and generic (post body) send error handling
  * [mmap] fix mmap alignment

- 1.4.36 - 2015-07-26
  * use keep-alive timeout while waiting for HTTP headers; use always the read timeout while waiting for the HTTP body
  * fix bad shift in conditional netmask ".../0" handling
  * add more mime types and a script to generate mime.conf (fixes #2579)
  * add support for (Free)BSD extended attributes
  * [build] use fortify flags with "extra-warnings"
  * [mod_dirlisting,mod_redirect,mod_rewrite] abort config parsing if pcre-compile fails or isn't available
  * [ssl] disable SSL3.0 by default
  * fixed typo in example config found by openSUSE user (boo# 907709)
  * [network] fix compile break in calculation of sockaddr_un size if SUN_LEN is not defined (fixes #2609)
  * [connections] fix bug in connection state handling
  * print backtrace in assert logging with libunwind
  * major refactoring of internal buffer/chunk handling
  * [mod_auth] use crypt_r instead of crypt if available
  * fix error message for T_CONFIG_ARRAY config values if an entry value is not a string
  * fix segfaults in many plugins if they failed configuration
  * escape all strings for logging (fixes #2646 log file injection, reported by Jaanus Kääp)
  * fix hex escape in accesslog (fixes #2559)
  * show extforward re-run warning only with debug.log-request-handling (fixes #2561)
  * parse If-None-Match for ETag validation (fixes #2578)
  * fix memory leak in mod_status when no counters are set (found by coverity)
  * [mod_magnet] fix segfault when accessing not existing lighty.req_env[] entry (found by coverity)