@@ -16,6 +16,7 @@ NEWS
   * [bsd xattr] fix compile break with BSD extended attributes in stat_cache
   * [mod_cgi] rewrite mmap and generic (post body) send error handling
   * [mmap] fix mmap alignment
+  * [plugins] when modules are linked statically still only load the modules given in the config
 
 - 1.4.36 - 2015-07-26
   * use keep-alive timeout while waiting for HTTP headers; use always the read timeout while waiting for the HTTP body
